Modified padding on ItemCardGrid to ensure enough space is given between grid and scrollbar

--- a/Frontend/Components/ItemContainer/ItemContainer.css
+++ b/Frontend/Components/ItemContainer/ItemContainer.css
@@ -15,4 +15,6 @@
     grid-gap: 20px;
     width: 100%;
     margin-top: 20px;
+    padding-left: 20px;
+    padding-right: 20px;
 }
